--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <meta name="copyright" content="Revathi">
     <meta name="reply-to" content="revathi20202@gmail.com">
     <meta name="owner" content="Revathi">
-    <meta name="url" content="https://alisolanki.github.io/Portfolio/">
-    <meta name="identifier-URL" content="https://alisolanki.github.io/Portfolio/">
+    <meta name="url" content="https://revathiii.github.io/">
+    <meta name="identifier-URL" content="https://revathiii.github.io/">
     <meta name="directory" content="submission">
     <meta name="category" content="Business | Portfolio">
     <meta name="coverage" content="Worldwide">
@@ -219,7 +219,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span><a href="#">https://github.com/revathiii</a></span>
+   					<span><a href="#">https://revathiii.github.io/</a></span>
    				</li>
                     <li>
                         <strong>Email:</strong>
@@ -583,7 +583,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://github.com/revathiii">Visit</a>
+			            <a href="https://revathiii.github.io/">Visit</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
                 </div> <!-- /modal-06 -->
