--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <meta name="copyright" content="Revathi">
     <meta name="reply-to" content="revathi20202@gmail.com">
     <meta name="owner" content="Revathi">
-    <meta name="url" content="https://revathiii.github.io/">
-    <meta name="identifier-URL" content="https://revathiii.github.io/">
+    <meta name="url" content="https://alisolanki.github.io/Portfolio/">
+    <meta name="identifier-URL" content="https://alisolanki.github.io/Portfolio/">
     <meta name="directory" content="submission">
     <meta name="category" content="Business | Portfolio">
     <meta name="coverage" content="Worldwide">
@@ -844,7 +844,6 @@
    <div id="preloader"> 
     	<div id="loader"></div>
    </div> 
-	
 
    <!-- Java Script
    ================================================== --> 
