--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
                 <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images\portfolio\portfolio.png" alt="Portfolio">
+	               	<img src="images\portfolio\Portfolio.JPG" alt="Portfolio">
 	                  <a href="#modal-06" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -573,7 +573,7 @@
 
                <div id="modal-06" class="popup-modal slider mfp-hide">
 				     	<div class="media">
-				     		<img src="images\portfolio\portfolio.png" alt="Portfolio" />
+				     		<img src="images\portfolio\Portfolio.JPG" alt="Portfolio" />
 				     	</div>      	
 
 					   <div class="description-box">
