--- a/index.html
+++ b/index.html
@@ -454,21 +454,21 @@
 	               </div>
 	        	</div> <!-- /folio-item -->
 
-				<!--<div class="bgrid folio-item">
+				<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/hospipro.jpg" alt="HospiPro">
+	               	<img src="images\portfolio\Home.jpg" alt="HospiPro">
 	                  <a href="#modal-05" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-                                <h3 class="folio-title">HospiPro</h3>	     					    
+                                <h3 class="folio-title">Online Shopping Application</h3>	     					    
                                     <span class="folio-types">
-                                    Android App Development
+										Website Development
                                 </span>
                             </div>	                      	
 	                     </div>                    
 	                  </a>
 	               </div>	               
-	        		</div>--> <!-- /folio-item -->
+	        		</div> <!-- /folio-item -->
 
 	        		<!--<div class="bgrid folio-item">
 	               <div class="item-wrap">
@@ -588,25 +588,25 @@
 			         </div>
                 </div> <!-- /modal-06 -->
 
-	           <!-- <div id="modal-05" class="popup-modal slider mfp-hide">	
+	            <div id="modal-05" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-hospipro.jpg" alt="HospiPro" />
+				     		<img src="images\portfolio\Home.jpg" alt="HospiPro" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>HospiPro</h4>		      
-					      <p>Android App for Hospital management system. It was built under 24hrs for the KJSCE Hackathon - 2019. </p>
+					      <h4>Online Shopping Application/h4>		      
+					      <p>This is a sample application that demonstrates an E-commerce website using Web Technology.</p>
 
-					      <div class="categories">Android App Development</div>			               
+					      <div class="categories">Website Development</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://github.com/Team-Eureka04/Hospipro/tree/App">Github</a>
+			            <a href="https://revathiii.github.io/Online_Shopping_Application/">Visit</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				</div>-->
+				</div>
 			 <!-- /modal-05 -->
 
 		<!--<div id="modal-04" class="popup-modal slider mfp-hide">	
