--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 						<ul type="disc"> 
 							<li><b>Web Development</b></li>
 						</ul>
-						    <span>Front-end: HTML5, CSS3</span>
+						    <span>Front-end: HTML5, CSS3, JavaScript</span>
 						    <span>Back-end: MySQL, Node JS, Mongo DB</span>
 						<ul type="disc"> 
 							<li><b>MERN Stack</b></li>
@@ -461,78 +461,13 @@
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
                                 <h3 class="folio-title">Online Shopping Application</h3>	     					    
-                                    <span class="folio-types">
-										Website Development
-                                </span>
+                                    <span class="folio-types">Website Development</span>
                             </div>	                      	
 	                     </div>                    
 	                  </a>
 	               </div>	               
 	        		</div> <!-- /folio-item -->
-
-	        		<!--<div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/portfolio/buttonpress.jpg" alt="Button Press">
-	               	<a href="#modal-04" class="overlay">              		                  
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-                                <h3 class="folio-title">Button Press</h3>	     					    
-                                <span class="folio-types">
-                                    Android App Development
-                                </span>		     		
-                            </div> 	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        		</div>--> <!-- /folio-item -->
-
-	            <!--<div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/portfolio/guestin.JPG"alt="GuestIn">
-	                  <a href="#modal-03" class="overlay">             		                  
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-                                <h3 class="folio-title">GuestIn</h3>	     					    
-                                <span class="folio-types">
-                                    Website Development
-                                </span>		     		
-                            </div> 	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        	</div>--> <!-- /folio-item -->
-
-	            <!--<div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/portfolio/snakegame.jpg" alt="snakegame">
-	                  <a href="#modal-02" class="overlay">                  	                 
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Snake Game</h3>	     					    
-                                <span class="folio-types">
-                                    Java Game Development
-                                </span>		     		
-                            </div>  	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        	</div>--> <!-- /folio-item -->     
-
-	        	<!--<div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/portfolio/portfolio_website.JPG" alt="Portfolio">
-	                  <a href="#modal-01" class="overlay">             		                  
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Portfolio</h3>	     					    
-		     			<span class="folio-types">
-		     				Website Development
-		     			</span>		     		
-		     		</div> 	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        	</div>--> <!-- /folio-item -->
+	        
 
 	            <!-- modal popups - begin
 	            ============================================================= -->
@@ -595,7 +530,7 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Online Shopping Application/h4>		      
+					      <h4>Online Shopping Application</h4>		      
 					      <p>This is a sample application that demonstrates an E-commerce website using Web Technology.</p>
 
 					      <div class="categories">Website Development</div>			               
@@ -609,86 +544,7 @@
 				</div>
 			 <!-- /modal-05 -->
 
-		<!--<div id="modal-04" class="popup-modal slider mfp-hide">	
 
-				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-buttonpress.jpg" alt="Button Press" />
-				     	</div>      	
-
-					   <div class="description-box">
-					      <h4>Button Press</h4>		      
-					      <p>Android Application that helps generate Random numbers.</p>
-
-					      <div class="categories">Android App Development</div>			               
-					   </div>
-
-			         <div class="link-box">
-			            <a href="https://github.com/alisolanki/ButtonPress">Github</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
-
-                </div>--> <!-- /modal-04 -->
-
-                <!--<div id="modal-03" class="popup-modal slider mfp-hide">	
-
-				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-guestin.JPG" alt="GuestIn" />
-				     	</div>      	
-
-					   <div class="description-box">
-					      <h4>GuestIn</h4>		      
-					      <p><strong>GuestIn</strong>, your one stop solution to get listed in the guestlist
-							of any Club or Bar all over <strong>Mumbai</strong>.</p>
-
-					      <div class="categories">Website Design</div>			               
-					   </div>
-
-			         <div class="link-box">
-			            <a href="https://github.com/alisolanki/GuestIn">GitHub</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
-
-                </div>--> <!-- /modal-03 -->
-
-                <!--<div id="modal-02" class="popup-modal slider mfp-hide">	
-
-				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-snakegame.JPG" alt="Snake Game" />
-				     	</div>      	
-
-					   <div class="description-box">
-					      <h4>Snake Game</h4>		      
-					      <p>Classical Snake game on Java (one of my first Projects).</p>
-
-					      <div class="categories">Java Game Development</div>			               
-					   </div>
-
-			         <div class="link-box">
-			            <a href="https://github.com/alisolanki/Snake-Game">Github</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
-
-                </div>--> <!-- /modal-02 -->
-
-                <!--<div id="modal-01" class="popup-modal slider mfp-hide">	
-
-				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-portfolio_website.JPG" alt="Portfolio" />
-				     	</div>      	
-
-					   <div class="description-box">
-					      <h4>Portfolio</h4>		      
-					      <p>My Portfolio Website made using HTML, CSS, JavaScript, PHP.</p>
-
-					      <div class="categories">Website Development</div>			               
-					   </div>
-
-			         <div class="link-box">
-			            <a href="http://alisolanki.gq">Details</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
-
-                </div>--> <!-- /modal-01 -->
 
 
 				   <!-- modal popups - end
