--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
 					<ul type="disc">
 						<li>Database Technology</li>
 						<li>Web Technology</li>
-						<li>UI/UX Designs</li>
 
 					</ul>
 				</li>
@@ -172,23 +171,17 @@
 					</ul>
 							<span>C</span>
 							<span>C++ (Intermediate)</span>
-							<span>Python (Intermediate)</span>
-							<span>SQL (Intermediate)</span>
 						<ul type="disc"> 
 							<li><b>Web Development</b></li>
 						</ul>
-						    <span>Front-end: HTML5, CSS3</span>
-						    <span>Back-end: MySQL, Node JS, Mongo DB</span>
-						<ul type="disc"> 
-							<li><b>MERN Stack</b></li>
-						</ul>
+						    <span>Front-end: HTML5, CSS3,JS</span>
+						    <span>Back-end: Node JS</span>
+					            <span>Database: MySQL, Mongo DB</span>
+					
 						<ul type="disc"> 
 							<li><b>Problem solving</b></li>
 						</ul>
-						<ul type="disc"> 
-							<li><b>UI/UX Design</b></li>
-						</ul>
-						    <span>Canva</span>
+						
 				</li>
 
 				<li>
@@ -285,7 +278,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="REVATHI R_COMPUTER TECHNOLOGY.pdf" title="Download Resume" class="button button-primary">Download Resume</a>
+   			<a href="REVATHI R.pdf" title="Download Resume" class="button button-primary">Download Resume</a>
    		</div>   		
    	</div>
 
